--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href='style.css'>
     <script src="vendors/jQuery-3.1.1.min.js" charset="utf-8"></script>
     <script src="scripts/script.js" charset="utf-8"></script>
     <title>Tau API Intro</title>
   </head>
   <body>
+  <div class='container'>
     <h1>Search Movies</h1>
     <input type="text" id='searchIn'/><button id="searchButton">Search</button>
+  </div>
     <div id='outputDiv'></div>
   </body>
 </html>
