jquery transition added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   <div class='container'>
     <h1>Search Movies</h1>
-    <input type="text" id='searchIn'/><button id="searchButton">Search</button>
+    <input type="text" id='searchIn' placeholder="Search here"/><button id="searchButton">Search</button>
   </div>
     <div id='outputDiv'></div>
   </body>
